tests/NormalTests/paczka1/fuzzy1/12523528.err
Error in line 4: ZQ6RrLeS A200 94,1
Error in line 3: A722 S610 34,1
Error in line 6: A722 A722 58,3
Error in line 30: 7Loktg S610 188,4
